<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WNY We Care</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="town_prompt">Choose a Town:</string>
    <string name="search_title">Search</string>
    <string name="searchbytown">Search by Town</string>
    <string name="searchbycurrentlocation">Search For Child Care</string>
    <string name="searchbyzip">Search By Zip</string>
    <string name="searchbylocation"></string>
    <string name="info_about_us"><b> Infinity Code Services </b> is native to Western New York with a shared passion for using technology and innavation to enhance our clients business capabilities as well as showcase IT culture in WNY</string>
    <string name="title_contact_us">Contact us</string>
    <string name="info_contact_us">Contact us if you need any help</string>
    <string name="link_contact_us">Email</string>
    <string name="title_website">Website</string>
    <string name="info_website">Visit our website</string>
    <string name="title_google_plus">Google +</string>
    <string name="info_google_plus">Visit our page</string>
    <string name="title_facebook">Facebook</string>
    <string name="info_facebook">Visit our fanpage</string>
    <string name="title_rate_us">Rate Us</string>
    <string name="info_rate_us">Rate Us in Google Play Store</string>
    <string name="title_more_app">More apps</string>
    <string name="info_more_app">Feel fun with our applications</string>
    <string name="poweredby">Powered By: Infinity Code Services</string>
     <string name="rating"></string>
	<string name="rate_btn">Feedback</string>
    <string name="agency_details">Agency Details</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone">Phone</string>
    <string name="age_range">Age Range</string>
    <string name="max_capacity">Capacity</string>
    <string name="favorite">Save</string>
    <string name="rate">Rate Agency</string>
    <string name="fav_title">Favorites</string>
    <string name="closebtn">X</string>
    <string name="Submitbtn">Submit</string>
    <string name="message">Please Leave Feedback</string>
    <string name="title">Feedback</string>
    <string name="button">Button</string>

    <!-- <string-array name="town_arrays">
        <item>Alden</item>
        <item>Amherst</item>
        <item>Angola</item>
        <item>Blasdell</item>
        <item>Bostan</item>
        <item>Bowmansville</item>
        <item>Buffalo</item>
        <item>Cheektowaga</item>
        <item>Clarence</item>
        <item>Depew</item>
        <item>Derby</item>
        <item>East Aurora</item>
        <item>Eden</item>
        <item>Elma</item>
        <item>Getzville</item>
        <item>Gowanda</item>
        <item>Grand Island</item>
        <item>Holland</item>
        <item>Irving</item>
        <item>Kenmore</item>
        <item>Lackawanna</item>
        <item>Lake View</item>
        <item>Lancaster</item>
        <item>Lawtons</item>
        <item>North Collins</item>
        <item>Orchard Park</item>
        <item>Snyder</item>
        <item>Springville</item>
        <item>Tonawanda</item>
        <item>West Seneca</item>
        <item>Williamsville</item>
        
    </string-array> -->
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Quick Search</item>
        <item >Favorites</item>
        <item >Settings</item>
        <item >About Us</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_quickfind</item>
        <item>@drawable/ic_favorites</item>
  		<item>@drawable/ic_settings</item>
        <item>@drawable/ic_about</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
     <style name="ButtonText">
	   <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textStyle">normal</item>
	    <item name="android:textSize">20sp</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
	
      <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Click Here to Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="facebook_app_id">301255090071945</string>

</resources>
