<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/header_bg_royal"
        android:paddingTop="6dp"
        android:text="@string/searchbycurrentlocation"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/g_map"
            android:text="@string/searchbylocation" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="@drawable/header_bg_royal"
        android:paddingTop="6dp"
        android:text="@string/searchbytown"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:background="@android:drawable/btn_dropdown"
            android:clickable="true" />

        <Button
            android:id="@+id/town_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/searchbytown" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/header_bg_royal"
        android:paddingTop="6dp"
        android:text="@string/searchbyzip"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/txt_zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5" >
            </EditText>

            <Button
                android:id="@+id/zip_search"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:clickable="true"
                android:text="@string/search_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>