<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wny.wecare.DetailFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/agency_details"
        android:textColor="@color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:orientation="vertical"
            android:weightSum="1" >

            <TextView
                android:id="@+id/agencynm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agency Name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/city"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="City"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:text="ST"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/zip"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="Zip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_name"
                    android:text="@string/contact_name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Contact"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/blue"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.23"
                    android:text="@string/age_range"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.59"
                    android:text="@string/max_capacity"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:id="@+id/ages"
                    android:layout_width="90dp"
                    android:layout_height="41dp"
                    android:layout_weight="0.55"
                    android:text="Ages"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="67dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.31"
                    android:text="Capacity"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/favorite" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:text="@string/rate"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cmntButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rate_btn" />

            </LinearLayout>
        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/android:list"
            android:background="@color/blue"
            android:layout_weight="1.21"/>

    </LinearLayout>

</RelativeLayout>